session-3/2_b_deploy-authors-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors
  labels:
    app: authors
    service: authors
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: authors
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-v2
  labels:
    app: authors
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
      version: v2
  template:
    metadata:
      labels:
        app: authors
        version: v2
    spec:
      serviceAccountName: servicemesh-authors
      containers:
        - name: authors
          image: docker.io/abevziuk/authors-service:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
