session-3/2_c_virtual-service-10-90.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio-authors
spec:
  hosts:
    - authors
  http:
  - route:
    - destination:
        host: authors
        subset: v1
      weight: 90
    - destination:
        host: authors
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio-books
spec:
  hosts:
    - books
  http:
  - route:
    - destination:
        host: books
        subset: v1
      weight: 90
    - destination:
        host: books
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books
spec:
  host: books
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
