session-3/3_d_virtual-service-header-based.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-header-matcher
spec:
  hosts:
    - frontend
  http:
    - name: "frontend-header-matcher"
      match:
        - headers:
            end-user:
              exact: abevziuk
      route:
        - destination:
            host: frontend
            subset: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
